SOA continue