@@ -11,19 +11,16 @@ import eu.quanticol.moonlight.core.signal.SpaceTimeSignal;
 import eu.quanticol.moonlight.core.space.DistanceStructure;
 import eu.quanticol.moonlight.core.space.SpatialModel;
 import eu.quanticol.moonlight.online.monitoring.OnlineSpatialTemporalMonitor;
-import eu.quanticol.moonlight.online.signal.TimeChain;
-import eu.quanticol.moonlight.online.signal.Update;
 import eu.quanticol.moonlight.space.StaticLocationService;
+import main.DataBus;
+import messages.CommonSensorsMessage;
 import messages.Message;
+import messages.ResultsMessage;
 
-import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
-public class OnlineMoonlightService implements Service<Tuple,
-        SpaceTimeSignal<Double, Box<Boolean>>>{
-
+public class OnlineMoonlightService implements Service{
     private final Formula formula;
     private final SpatialModel<Double> spatialModel;
     private final Map<String, Function<Tuple, Box<Boolean>>> atoms;
@@ -32,9 +29,8 @@ public class OnlineMoonlightService implements Service<Tuple,
 
     private OnlineSpatialTemporalMonitor<?, Tuple, Boolean> onlineMonitor;
 
-    private SpaceTimeSignal<Double, Box<Boolean>> results;
-
     private Buffer<Tuple> buffer;
+    private DataBus dataBus;
 
     public OnlineMoonlightService(Formula formula, SpatialModel<Double> model,
             Map<String, Function<Tuple, Box<Boolean>>> atoms,
@@ -44,7 +40,7 @@ public class OnlineMoonlightService implements Service<Tuple,
         this.atoms = atoms;
         locSvc = new StaticLocationService<>(this.spatialModel);
         this.distanceFunctions = distanceFunctions;
-        buffer = new ConstantSizeBuffer<>(model.size(), 6, service);
+        buffer = new ConstantSizeBuffer<>(model.size(), 6);
         //buffer = new FixedTimeBuffer<>(this, model.size(),service, 10000);
     }
 
@@ -53,19 +49,21 @@ public class OnlineMoonlightService implements Service<Tuple,
         return onlineMonitor!=null;
     }
 
-    @Override
-    public void run(Update<Double, List<Tuple>> update) {
-        results = onlineMonitor.monitor(update);
-    }
-
+    //TODO: Filter the messages in the DatBus in the future
     @Override
     public void receive(Message message) {
-        throw new UnsupportedOperationException();
+        if(message instanceof CommonSensorsMessage){
+            if(buffer.add((CommonSensorsMessage) message)){
+                sendResults();
+            }
+        }
     }
 
-    @Override
-    public void run(TimeChain<Double, List<Tuple>> timeChain) {
-        results = onlineMonitor.monitor(timeChain);
+    public void sendResults(){
+        SpaceTimeSignal<Double, Box<Boolean>> results;
+        results = onlineMonitor.monitor(buffer.get());
+        buffer.flush();
+        dataBus.offer(new ResultsMessage<>(results));
     }
 
     @Override
@@ -73,6 +71,7 @@ public class OnlineMoonlightService implements Service<Tuple,
         onlineMonitor = new OnlineSpatialTemporalMonitor<>(
                 formula, spatialModel.size(), new BooleanDomain(),
                 locSvc, atoms, distanceFunctions);
+        dataBus = DataBus.getInstance();
     }
 
     @Override
@@ -81,31 +80,11 @@ public class OnlineMoonlightService implements Service<Tuple,
     }
 
 
-    @Override
-    public SpaceTimeSignal<Double, Box<Boolean>> getResponseFromService() {
-        return results;
-    }
-
-    //TODO: Receive the data from the bus
-    public void updateData(Message message) {
-        if(buffer.add(message)){
-            updateResponse();
-        }
-    }
-
-    //TODO: Send the data to the bus
-    public void updateResponse() {
-        result = service.getResponseFromService();
-        //TODO: Quit print line
-        // Send it to a client/dashboard
-        System.out.println(getResults());
-    }
-
-
-    public List<String> getResults() {
-        return result.getSegments().toList().stream() // converts signal to a list
-                .map(Object::toString) // convert signal segments to strings
-                .collect(Collectors.toList()); // recollect as list of strings
-    }
+//    public List<String> getResults() {
+//        return result.getSegments().toList().stream() // converts signal to a list
+//                .map(Object::toString) // convert signal segments to strings
+//                .collect(Collectors.toList()); // recollect as list of strings
+//        return null;
+//    }
 
 }
